resolved home overflow issue

--- a/client/src/components/app.css
+++ b/client/src/components/app.css
@@ -59,8 +59,7 @@ html, body {
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    padding: 10px;
-    margin-top: -10px;
+    margin: 15px auto;
 }
 
 .ballicon {
@@ -127,7 +126,7 @@ a {
 /*--- PROFILE HERO IMG // CONTENT 
 -------------------------------------------------- */
 .profile-hero {
-    height: 40vh;
+    height: 35vh;
     border-radius: 0;
     background: url("./imgs/profile-hero.png");
     background-size: cover;
